--- a/src/app.css
+++ b/src/app.css
@@ -106,7 +106,8 @@ ul {
     /* Font Sizes */
     --font-size-small: 0.8rem;
     --font-size-medium: 1rem;
-    --font-size-large: 3rem;
+    --font-size-large: 2rem;
+    --font-size-xlarge: 3rem;
 
     /* Font Family */
     --font-family-primary: 'Josefin Sans', sans-serif;
