--- a/src/app.css
+++ b/src/app.css
@@ -76,6 +76,11 @@ ul {
     --color-light-gray: #f8f9fa;
     --color-hover-gray: #eaeff4;
 
+    --color-green: #4CAF50;
+    --color-blue: #2196F3;
+    --color-yellow: #FFC107;
+    --color-red: red;
+
     /* Breakpoints */
     --breakpoint-mobile: 768px;
     --breakpoint-tablet: 1024px;
