--- a/src/app.css
+++ b/src/app.css
@@ -75,10 +75,10 @@ ul {
 	--color-light-gray: #f8f9fa;
 	--color-hover-gray: #eaeff4;
 
-	--color-green: #5bc980;
-	--color-blue: #559dd6;
-	--color-yellow: #e9d875;
-	--color-red: #c6335f;
+	--color-green: #1FAA59;
+	--color-blue: #2D2DCF;
+	--color-yellow: #E1C16E;
+	--color-red: #D72638;
 
 	/* Breakpoints */
 	--breakpoint-mobile: 768px;
