new page "visa" created to give info about visas

--- a/src/app.css
+++ b/src/app.css
@@ -95,7 +95,7 @@ ul {
 	--spacing-small: 8px;
 	--spacing-medium: 15px;
 	--spacing-large: 30px;
-	--spacing-xl: 40px;
+	--spacing-xlarge: 40px;
 
 	/* Sizes */
 	--max-width-container: 50rem;
