--- a/src/app.css
+++ b/src/app.css
@@ -76,7 +76,7 @@ ul {
 	--color-hover-gray: #eaeff4;
 
 	--color-green: #1FAA59;
-	--color-blue: #2D2DCF;
+	--color-blue: #2176FF;
 	--color-yellow: #E1C16E;
 	--color-red: #D72638;
 
